--- a/app/src/main/res/layout/match_layout.xml
+++ b/app/src/main/res/layout/match_layout.xml
@@ -64,6 +64,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="ROUNDS"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -73,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:textAlignment="center"
                 android:text="- -"
                 android:textStyle="bold" />
 
@@ -93,6 +95,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="WINS"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -103,6 +106,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
 
@@ -131,6 +135,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="RESULT"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -141,6 +146,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
 
@@ -160,6 +166,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="RATING"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -170,6 +177,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -188,6 +196,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="KILLS"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -198,6 +207,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -224,6 +234,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="DAMAGE"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -234,6 +245,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -252,6 +264,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="DISTANCE"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -262,6 +275,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
 
@@ -281,6 +295,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="SURVIVED"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -291,10 +306,8 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
-
-
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
