--- a/app/src/main/res/layout/no_user_layout.xml
+++ b/app/src/main/res/layout/no_user_layout.xml
@@ -7,9 +7,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center|top"
         android:orientation="vertical"
-        android:layout_margin="@dimen/material_baseline_grid_2x"
+        android:layout_marginStart="@dimen/material_baseline_grid_2x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+        android:layout_marginTop="@dimen/material_baseline_grid_10x"
         android:padding="@dimen/sfl_global_keyline_s">
 
         <com.mikepenz.iconics.view.IconicsImageView
