--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -135,8 +135,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/navigation_view"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="@dimen/material_baseline_grid_8x"
-        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
+        android:layout_marginBottom="@dimen/material_baseline_grid_8.5x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
         android:clickable="true"
         app:fab_colorNormal="@color/colorAccentAlt"
         app:fab_colorPressed="@color/colorAccentAltDark"
