--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -131,8 +131,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="@dimen/material_baseline_grid_8x"
-        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
+        android:layout_marginBottom="@dimen/material_baseline_grid_8.5x"
+        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
         android:clickable="true"
         app:fab_colorNormal="@color/colorAccent"
         app:fab_colorPressed="@color/colorAccentDark"
