--- a/app/src/main/res/layout/last_match_card.xml
+++ b/app/src/main/res/layout/last_match_card.xml
@@ -4,14 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/material_baseline_grid_2x"
-    android:animateLayoutChanges="true"
+    android:layout_margin="@dimen/material_card_edge_margin"
     android:padding="@dimen/material_card_edge_margin"
-    android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom_last_block"
+    android:animateLayoutChanges="true"
     app:cardCornerRadius="4dp"
     app:cardElevation="@dimen/material_card_elevation_resting"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    app:cardPreventCornerOverlap="true">
 
     <LinearLayout
         android:layout_width="match_parent"
