--- a/app/src/main/res/layout/playlist_overview_card_full.xml
+++ b/app/src/main/res/layout/playlist_overview_card_full.xml
@@ -9,12 +9,9 @@
         android:id="@+id/overview_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/material_baseline_grid_1x"
-        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-        android:layout_marginStart="@dimen/material_baseline_grid_2x"
-        android:layout_marginTop="@dimen/material_baseline_grid_1x"
-        android:animateLayoutChanges="true"
+        android:layout_margin="@dimen/material_card_edge_margin"
         android:padding="@dimen/material_card_edge_margin"
+        android:animateLayoutChanges="true"
         app:cardCornerRadius="4dp"
         app:cardElevation="@dimen/material_card_elevation_resting"
         app:cardPreventCornerOverlap="true">
