--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,114 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:fitsSystemWindows="false"
-            android:paddingBottom="@dimen/material_baseline_grid_1x">
-
-            <com.lapism.searchview.SearchView
-                android:id="@+id/searchView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="false"
-                app:layout_behavior="com.lapism.searchview.SearchBehavior"
-                app:search_shadow="false" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/material_baseline_grid_1x"
-                android:layout_marginTop="@dimen/material_baseline_grid_1x"
-                android:fitsSystemWindows="false"
-                android:gravity="center"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:id="@+id/profile_name"
-                    style="@style/TextAppearance.AppCompat.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center|bottom"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    app:layout_collapseMode="pin" />
-
-                <TextView
-                    android:id="@+id/current_rank"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:gravity="center|bottom"
-                    android:textAlignment="center"
-                    android:visibility="invisible" />
-
-
-                <TextView
-                    android:id="@+id/current_KD"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_0.5x"
-                    android:gravity="center"
-                    android:visibility="invisible" />
-
-
-                <com.mikepenz.iconics.view.IconicsImageView
-                    android:id="@+id/favorite_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/material_baseline_grid_0.5x"
-                    android:scaleType="centerCrop" />
-
-            </LinearLayout>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/navigation_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="4dp"
-            app:tabTextColor="@color/white">
-
-            <android.support.design.widget.TabItem
-                android:text="@string/title_statistics"/>
-
-            <android.support.design.widget.TabItem
-                android:text="@string/title_home"/>
-
-            <android.support.design.widget.TabItem
-                android:text="@string/title_match_history"/>
-
-        </android.support.design.widget.TabLayout>
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/contentFrame"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-        </android.support.v4.widget.SwipeRefreshLayout>
-    </LinearLayout>
+    android:layout_height="match_parent">
 
 </android.support.design.widget.CoordinatorLayout>
